# invesalius3

./: .gitignore  CMakeLists.txt  app.py  pyproject.toml  requirements.txt  requirements_m1.txt  setup.py
.github/workflows/: bundles.yml  compile_invesalius_cy_windows.yml
bundle_tools/mac/: app.spec
bundle_tools/win/: app.spec
invesalius/: __version__.py  aesara_backend.py  constants.py  control.py  enhanced_logging.py  error_handling.py  i18n.py  inv_paths.py  project.py  utils.py  version.py
invesalius/data/: _growcut.pyx  coordinates.py  cursor_actors.py  floodfill.pyx  geometry.py  growcut.py  growcut.pyx  imagedata_utils.py  mask.py  measures.py  polygon_select.py  record_coords.py  ruler.py  ruler_volume.py  slice_.py  slice_data.py  smooth_cy.pyx  styles.py  styles_3d.py  surface.py  surface_process.py  threshold.pyx  tracker_connection.py  transforms.pyx  viewer_slice.py  viewer_volume.py  vtk_utils.py  watershed_process.py
invesalius/data/markers/: surface_geometry.py
invesalius/data/visualization/: mep_visualizer.py
invesalius/gui/: bitmap_preview_panel.py  brain_seg_dialog.py  data_notebook.py  deep_learning_seg_dialog.py  default_tasks.py  default_viewers.py  dialogs.py  dicom_preview_panel.py  frame.py  import_bitmap_panel.py  import_network_panel.py  import_panel.py  interactive_shell.py  language_dialog.py  log.py  preferences.py  project_properties.py  task_efield.py  task_exporter.py  task_fmrisupport.py  task_generic.py  task_importer.py  task_imports.py  task_mepmapping.py  task_navigator.py  task_slice.py  task_surface.py  task_tools.py  task_tractography.py  utils.py
invesalius/gui/widgets/: canvas_renderer.py  clut_imagedata.py  clut_raycasting.py  fiducial_buttons.py  gradient.py  inv_spinctrl.py  listctrl.py  slice_menu.py  wxInvVTKRenderWindowInteractor.py
invesalius/navigation/: iterativeclosestpoint.py  navigation.py  robot.py
invesalius/net/: neuronavigation_api.py  pedal_connection.py  remote_control.py
invesalius/reader/: bitmap_reader.py  others_reader.py  vtk_reader.py
invesalius/segmentation/brain/: segment.py  utils.py
invesalius_cy/: CMakeLists.txt  cy_mesh.pyx  cy_my_types.pxd  mesh.h  volume_cut.pyx
invesalius_rs/: Cargo.toml
invesalius_rs/src/: mesh.rs
tests/: test_tracker.py
