[project]
name = "invesalius"
version = "0.1.0"
description = "3D medical imaging reconstruction software"
authors = [
  { name = "Thiago Franco de Moraes", email = "totonixsame@gmail.com" },
]
keywords = [
  "medical imaging",
  "dicom",
  "segmentation",
  "3D printing",
  "neuronavigation",
]
license = { file = "LICENSE.txt" }
dependencies = [
  "wxpython>=4.2.1",
  "pyopengl>=3.1.7",
  "pyopengl-accelerate>=3.1.7",
  "numpy>=1.26.4",
  "scipy>=1.13.0",
  "matplotlib>=3.8.4",
  "pillow>=10.3.0",
  "imageio>=2.34.1",
  "nibabel>=5.2.1",
  "scikit-image>=0.23.2",
  "python-gdcm>=3.0.24.1",
  "vtk>=9.3.0",
  "torch>=2.3.0",
  "cython>=3.0.10",
  "pypubsub>=4.0.3",
  "h5py>=3.11.0",
  "psutil>=5.9.8",
  "pyserial>=3.5",
  "pyacvd>=0.2.11",
  "setuptools>=69.5.1",
]
readme = "README.md"
requires-python = ">= 3.8"
dynamic = ["version"]

[project.gui-scripts]
inv = 'invesalius.app:main'

[build-system]
requires = ["scikit-build-core", "cython >= 3.0.2", "numpy >= 1.26.4"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
experimental = true
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["invesalius/version.py"]

[tool.setuptools_scm]  # Section required
write_to = "invesalius/version.py"

[tool.rye]
managed = true
dev-dependencies = ["mypy>=1.10.0"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["invesalius", "invesalius_cy"]

[tool.mypy]
show_error_codes = true
check_untyped_defs = false
disallow_any_generics = false
disallow_incomplete_defs = false
disallow_untyped_defs = false
warn_redundant_casts = false
warn_unused_ignores = false
no_implicit_optional = false
strict_equality = false
warn_return_any = false
warn_unreachable = false
warn_unused_configs = false
no_implicit_reexport = false
follow_imports = "normal"

disable_error_code =  ["attr-defined", "no-redef"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    'wx.*',
    'vtkmodules.*',
    'pubsub.*',
    'scipy.*',
    'skimage.*',
    'serial.*',
    'gdcm.*',
    'pyacvd.*',
    'vtk.*',
    'scipy.spatial.*',
    'invesalius.data.camera_tracker.*',
    'aioconsole.*',
    'nest_asyncio.*',
    'uvicorn.*',
    'polhemus.*',
    'polhemusFT.*',
    'pyclaron.*',
    'urllib2.*',
    'optitrack.*',
    'ordereddict.*',
    'keras.*',
    'Image.*',
    'mido.*',
    'ConfigParser.*',
    'Queue.*',
    'weakrefmethod.*',
    'torchviz.*',
    'Trekker.*',
    'sklearn.*',
    'usb.*',
    'plaidml.*',
    'pypolaris.*',
    'pypolarisP4.*',
    'socketio.*',
    'setuptools.*',
    'psutil.*',
    'h5py.*',
    'info.*',
    'pandas.*',
    'PIL.*',
    'win32com.client.*',
    'win32com.*',
    'sigar.*',
]
ignore_missing_imports = true

[tool.ruff]
include = ["pyproject.toml", "invesalius/**/*.py",'setup.py','app.py']
line-length = 100
# extend-exclude = ["plugins"]

[tool.ruff.lint]
extend-select = ["UP"] # Introduces linting rules for pyupgrade
# We can extend the list with 'I' and 'PL' in the future

[tool.ruff.format]
line-ending = "lf"
